--- a/default.css
+++ b/default.css
@@ -65,7 +65,7 @@
     min-height: 120px;
     height: 100%;
 }
-.XingFu_user {
+.XingFu_list > div {
     display: inline-block;
     width: 80px;
     height: 80px;
@@ -73,6 +73,13 @@
     text-align: center;
     transition: cubic-bezier(0.6, -0.28, 0.735, 0.045);
     cursor: grab;
+    padding: 5px;
+    margin: 0 2px;
+}
+.selected {
+    background-color: rgb(236, 196, 137);
+    box-shadow: 0px 6px 10px 0px rgba(220, 215, 215, 0.8);
+    border-radius: 5px;
 }
 
 .XingFu_avater {
