--- a/default.css
+++ b/default.css
@@ -56,6 +56,9 @@
     text-align: center;
     font-size: 16px;
     line-height: 2;
+    min-width: 130px;
+    text-align: right;
+    display: inline-block;
 }
 .XingFu_list {
     background-color: #eeee;
